form validation completed

--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              I am an accomplished Full Stack Developer, having successfully
+              completed rigorous training in the MERN stack. This foundation
+              positions me confidently for a successful career in web
+              development, ready to contribute effectively and drive innovation.
             </p>
           </div>
 
@@ -389,92 +389,41 @@
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Alex Smith</h4>
+                <h4>Roshan E D</h4>
                 <p>
-                  <em
-                    >Innovative and deadline-driven Graphic Designer with 3+
-                    years of experience designing and developing user-centered
-                    digital/print marketing material from initial concept to
-                    final, polished deliverable.</em
+                  <em>
+                    I have acquired a robust skill set that encompasses a wide
+                    spectrum of web development technologies. My educational and
+                    hands-on experiences have equipped me with a profound
+                    understanding of the MERN stack's intricacies and its
+                    practical application in real-world scenarios.</em
                   >
                 </p>
                 <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
+                  <li>Kochi, Kerala</li>
+                  <li>+91 7594837203</li>
+                  <li>edroshan2001@gmail.com</li>
                 </ul>
-              </div>
-
-              <h3 class="resume-title">Education</h3>
-              <div class="resume-item">
-                <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                <h5>2015 - 2016</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>
-                  Qui deserunt veniam. Et sed aliquam labore tempore sed
-                  quisquam iusto autem sit. Ea vero voluptatum qui ut
-                  dignissimos deleniti nerada porti sand markend
-                </p>
-              </div>
-              <div class="resume-item">
-                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                <h5>2010 - 2014</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>
-                  Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
-                  reiciendis et quis Eius vel ratione eius unde vitae rerum
-                  voluptates asperiores voluptatem Earum molestiae consequatur
-                  neque etlon sader mart dila
-                </p>
               </div>
             </div>
+            <!-- ------ -->
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Professional Experience</h3>
+              <h3 class="resume-title">Education</h3>
               <div class="resume-item">
-                <h4>Senior graphic design specialist</h4>
-                <h5>2019 - Present</h5>
-                <p><em>Experion, New York, NY </em></p>
-                <ul>
-                  <li>
-                    Lead in the design, development, and implementation of the
-                    graphic, layout, and production communication materials
-                  </li>
-                  <li>
-                    Delegate tasks to the 7 members of the design team and
-                    provide counsel on all aspects of the project.
-                  </li>
-                  <li>
-                    Supervise the assessment of all graphic materials in order
-                    to ensure quality and accuracy of the design
-                  </li>
-                  <li>
-                    Oversee the efficient use of production project budgets
-                    ranging from $2,000 - $25,000
-                  </li>
-                </ul>
+                <h4>Full stack developer trainee</h4>
+                <h5>2022 - 2023</h5>
+                <p><em>Brototype, kochi</em></p>
+                <p>
+                  Writing code that is highly scalable, robust, and easily
+                  maintainable, following best practices and design
+                  patterns.Transforming software requirements into efficient,
+                  stable, and high-performance software solutions
+                </p>
               </div>
               <div class="resume-item">
-                <h4>Graphic design specialist</h4>
-                <h5>2017 - 2018</h5>
-                <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                <ul>
-                  <li>
-                    Developed numerous marketing programs (logos,
-                    brochures,infographics, presentations, and advertisements).
-                  </li>
-                  <li>
-                    Managed up to 5 projects or tasks at a given time while
-                    under pressure
-                  </li>
-                  <li>
-                    Recommended and consulted with clients on the most
-                    appropriate graphic design
-                  </li>
-                  <li>
-                    Created 4+ design presentations and proposals a month for
-                    clients and account managers
-                  </li>
-                </ul>
+                <h4>Diploma in Electronics &amp; communication</h4>
+                <h5>2019 - 2022</h5>
+                <p><em>Maharajas technological institute, Thrissur</em></p>
               </div>
             </div>
           </div>
@@ -486,19 +435,20 @@
       <section id="services" class="services">
         <div class="container">
           <div class="section-title">
-            <h2>Services</h2>
+            <h2>Projects</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              In my pursuit of enhancing my proficiency in web development, I
+              have independently undertaken and completed several personal
+              projects. These endeavors have not only expanded my practical
+              skills but also deepened my understanding of various facets within
+              the realm of web development
             </p>
           </div>
 
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-              <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <div class="icon"><i class="bi bi-signal"></i></div>
+              <h4 class="title"><a href="">Social media</a></h4>
               <p class="description">
                 Voluptatum deleniti atque corrupti quos dolores et quas
                 molestias excepturi sint occaecati cupiditate non provident
@@ -509,8 +459,8 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <div class="icon"><i class="bi bi-bag"></i></div>
+              <h4 class="title"><a href="">E-Commerce</a></h4>
               <p class="description">
                 Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat tarad limino ata
@@ -521,8 +471,8 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <div class="icon"><i class="bi bi-journal"></i></div>
+              <h4 class="title"><a href="">Note saver</a></h4>
               <p class="description">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur
@@ -533,8 +483,8 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <div class="icon"><i class="bi bi-binoculars"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <div class="icon"><i class="bi bi-tv"></i></div>
+              <h4 class="title"><a href="">Netflix clone</a></h4>
               <p class="description">
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa
                 qui officia deserunt mollit anim id est laborum
@@ -545,8 +495,8 @@
               data-aos="fade-up"
               data-aos-delay="400"
             >
-              <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <div class="icon"><i class="bi bi-card-checklist"></i></div>
+              <h4 class="title"><a href="">Todo app</a></h4>
               <p class="description">
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui
                 blanditiis praesentium voluptatum deleniti atque
@@ -557,8 +507,8 @@
               data-aos="fade-up"
               data-aos-delay="500"
             >
-              <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <div class="icon"><i class="bi bi-cloud-drizzle"></i></div>
+              <h4 class="title"><a href="">Weather app</a></h4>
               <p class="description">
                 Et harum quidem rerum facilis est et expedita distinctio. Nam
                 libero tempore, cum soluta nobis est eligendi
@@ -588,85 +538,82 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Chalakudy, Thrissur</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>edroshan2001@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+91 7594837203</p>
                 </div>
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d16162.60016928683!2d76.30125711415032!3d10.292115077563322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDE3JzQxLjYiTiA3NsKwMTgnMDUuNCJF!5e0!3m2!1sen!2sin!4v1691771080173!5m2!1sen!2sin"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
               </div>
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-                action="forms/contact.php"
+                action=""
                 method="post"
                 role="form"
                 class="php-email-form"
+                onsubmit="handleSubmit(event)"
               >
                 <div class="row">
                   <div class="form-group col-md-6">
+                    <span id="nameError" style="color: red;"></span> <br>
                     <label for="name">Your Name</label>
                     <input
                       type="text"
                       name="name"
                       class="form-control"
                       id="name"
-                      required
                     />
                   </div>
                   <div class="form-group col-md-6">
+                    <span id="emailError" style="color: red;"></span> <br>
                     <label for="name">Your Email</label>
                     <input
-                      type="email"
+                      type="text"
                       class="form-control"
                       name="email"
                       id="email"
-                      required
                     />
                   </div>
                 </div>
                 <div class="form-group">
+                  <span id="subjectError" style="color: red;"></span> <br>
                   <label for="name">Subject</label>
                   <input
                     type="text"
                     class="form-control"
                     name="subject"
                     id="subject"
-                    required
                   />
                 </div>
                 <div class="form-group">
+                  
                   <label for="name">Message</label>
                   <textarea
                     class="form-control"
                     name="message"
                     rows="10"
-                    required
                   ></textarea>
                 </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank you!
-                  </div>
-                </div>
+                
                 <div class="text-center">
                   <button type="submit">Send Message</button>
                 </div>
@@ -708,5 +655,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/form.js"></script>
   </body>
 </html>
+
