--- a/index.html
+++ b/index.html
@@ -450,8 +450,10 @@
               <div class="icon"><i class="bi bi-signal"></i></div>
               <h4 class="title"><a href="">Social media</a></h4>
               <p class="description">
-                Voluptatum deleniti atque corrupti quos dolores et quas
-                molestias excepturi sint occaecati cupiditate non provident
+                A social media application using React.js, Node.js And mongoDB.
+                Writed code using Typescript for better debuging and error
+                finding.Used clean architecture for better code understanding
+                and reusability.
               </p>
             </div>
             <div
@@ -462,8 +464,9 @@
               <div class="icon"><i class="bi bi-bag"></i></div>
               <h4 class="title"><a href="">E-Commerce</a></h4>
               <p class="description">
-                Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat tarad limino ata
+                Created a E-commerce platform using Node.js, Express and
+                MongoDB. Used ssr with ejs engine. Implemented various
+                e-commerce functionalities.
               </p>
             </div>
             <div
@@ -574,7 +577,7 @@
               >
                 <div class="row">
                   <div class="form-group col-md-6">
-                    <span id="nameError" style="color: red;"></span> <br>
+                    <span id="nameError" style="color: red"></span> <br />
                     <label for="name">Your Name</label>
                     <input
                       type="text"
@@ -584,7 +587,7 @@
                     />
                   </div>
                   <div class="form-group col-md-6">
-                    <span id="emailError" style="color: red;"></span> <br>
+                    <span id="emailError" style="color: red"></span> <br />
                     <label for="name">Your Email</label>
                     <input
                       type="text"
@@ -595,7 +598,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <span id="subjectError" style="color: red;"></span> <br>
+                  <span id="subjectError" style="color: red"></span> <br />
                   <label for="name">Subject</label>
                   <input
                     type="text"
@@ -605,7 +608,6 @@
                   />
                 </div>
                 <div class="form-group">
-                  
                   <label for="name">Message</label>
                   <textarea
                     class="form-control"
@@ -613,7 +615,7 @@
                     rows="10"
                   ></textarea>
                 </div>
-                
+
                 <div class="text-center">
                   <button type="submit">Send Message</button>
                 </div>
@@ -658,4 +660,3 @@
     <script src="assets/js/form.js"></script>
   </body>
 </html>
-
