--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img
-            src="assets/img/roshnedRESIZE.jpg"
+            src="assets/img/roshan_dp.jpg"
             alt=""
             class="img-fluid rounded-circle"
           />
@@ -136,7 +136,7 @@
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/roshan.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/roshan_profile.jpg" class="img-fluid" style="max-width: 70%;" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>MERN Stack Developer</h3>
