--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/roshan_profile.jpg" class="img-fluid" style="max-width: 70%;" alt="" />
+              <img
+                src="assets/img/roshan_profile.jpg"
+                class="img-fluid"
+                style="max-width: 70%"
+                alt=""
+              />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>MERN Stack Developer</h3>
@@ -450,10 +455,10 @@
               <div class="icon"><i class="bi bi-signal"></i></div>
               <h4 class="title"><a href="">Social media</a></h4>
               <p class="description">
-                A social media application using React.js, Node.js And mongoDB.
-                Writed code using Typescript for better debuging and error
-                finding.Used clean architecture for better code understanding
-                and reusability.
+                Built a social media application with React.js, Node.js, and
+                MongoDB. Utilized TypeScript for improved debugging and error
+                detection. Implemented a clean architecture approach for
+                enhanced code comprehension and reusability.
               </p>
             </div>
             <div
@@ -464,9 +469,24 @@
               <div class="icon"><i class="bi bi-bag"></i></div>
               <h4 class="title"><a href="">E-Commerce</a></h4>
               <p class="description">
-                Created a E-commerce platform using Node.js, Express and
-                MongoDB. Used ssr with ejs engine. Implemented various
-                e-commerce functionalities.
+                Developed an E-commerce platform using Node.js, Express, and
+                MongoDB, incorporating server-side rendering (SSR) with the EJS
+                template engine. Successfully implemented various e-commerce
+                functionalities.
+              </p>
+            </div>
+            <div
+              class="col-lg-4 col-md-6 icon-box"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="icon"><i class="bi bi-tv"></i></div>
+              <h4 class="title"><a href="">AI-Prompt Generator</a></h4>
+              <p class="description">
+                Developed a Prompt Generator application using Next.js and
+                MongoDB, employing Next.js for server-side rendering (SSR) and
+                MongoDB as the database. Implemented authentication using
+                NextAuth, enabling users to create, update, and delete prompts.
               </p>
             </div>
             <div
@@ -477,22 +497,12 @@
               <div class="icon"><i class="bi bi-journal"></i></div>
               <h4 class="title"><a href="">Note saver</a></h4>
               <p class="description">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur
+                Developed a note-saving application using React and Node.js,
+                with the implementation of CRUD (Create, Read, Update, Delete)
+                operations.
               </p>
             </div>
-            <div
-              class="col-lg-4 col-md-6 icon-box"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="icon"><i class="bi bi-tv"></i></div>
-              <h4 class="title"><a href="">Netflix clone</a></h4>
-              <p class="description">
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum
-              </p>
-            </div>
+
             <div
               class="col-lg-4 col-md-6 icon-box"
               data-aos="fade-up"
@@ -501,8 +511,10 @@
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Todo app</a></h4>
               <p class="description">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque
+                Designed and developed a To-Do application using React.js with
+                the aim of enhancing proficiency in React. Employed Redux for
+                efficient global state management and utilized Material UI for
+                an aesthetically pleasing design.
               </p>
             </div>
             <div
@@ -513,8 +525,8 @@
               <div class="icon"><i class="bi bi-cloud-drizzle"></i></div>
               <h4 class="title"><a href="">Weather app</a></h4>
               <p class="description">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam
-                libero tempore, cum soluta nobis est eligendi
+                Developed a weather application using React, leveraging a
+                weather API to fetch real-time weather details.
               </p>
             </div>
           </div>
@@ -527,12 +539,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Contact</h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            
           </div>
 
           <div class="row" data-aos="fade-in">
