project link added

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-signal"></i></div>
-              <h4 class="title"><a href="">Social media</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/Connectify">Social media</a></h4>
               <p class="description">
                 Built a social media application with React.js, Node.js, and
                 MongoDB. Utilized TypeScript for improved debugging and error
@@ -467,7 +467,7 @@
               data-aos-delay="100"
             >
               <div class="icon"><i class="bi bi-bag"></i></div>
-              <h4 class="title"><a href="">E-Commerce</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/E-Commerce">E-Commerce</a></h4>
               <p class="description">
                 Developed an E-commerce platform using Node.js, Express, and
                 MongoDB, incorporating server-side rendering (SSR) with the EJS
@@ -481,7 +481,7 @@
               data-aos-delay="300"
             >
               <div class="icon"><i class="bi bi-tv"></i></div>
-              <h4 class="title"><a href="">AI-Prompt Generator</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/ai-prompt-generator">AI-Prompt Generator</a></h4>
               <p class="description">
                 Developed a Prompt Generator application using Next.js and
                 MongoDB, employing Next.js for server-side rendering (SSR) and
@@ -495,7 +495,7 @@
               data-aos-delay="200"
             >
               <div class="icon"><i class="bi bi-journal"></i></div>
-              <h4 class="title"><a href="">Note saver</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/note-app">Note saver</a></h4>
               <p class="description">
                 Developed a note-saving application using React and Node.js,
                 with the implementation of CRUD (Create, Read, Update, Delete)
@@ -509,7 +509,7 @@
               data-aos-delay="400"
             >
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Todo app</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/ToDo-List">Todo app</a></h4>
               <p class="description">
                 Designed and developed a To-Do application using React.js with
                 the aim of enhancing proficiency in React. Employed Redux for
@@ -523,7 +523,7 @@
               data-aos-delay="500"
             >
               <div class="icon"><i class="bi bi-cloud-drizzle"></i></div>
-              <h4 class="title"><a href="">Weather app</a></h4>
+              <h4 class="title"><a href="https://github.com/RoshanDasan/React-weather-app">Weather app</a></h4>
               <p class="description">
                 Developed a weather application using React, leveraging a
                 weather API to fetch real-time weather details.
